Seventh Commit - Implementing Domain Layer - Mappers - Class 13

--- a/app/src/main/res/layout/item_grid_character.xml
+++ b/app/src/main/res/layout/item_grid_character.xml
@@ -6,7 +6,8 @@
     <data>
         <variable
             name="character"
-            type="com.platzi.android.rickandmorty.api.CharacterServer" />
+            type="com.platzi.android.rickandmorty.domain.Character" />
+            <!-- type="com.platzi.android.rickandmorty.api.CharacterServer" /> cambiado en clase 13 -->
     </data>
 
     <com.google.android.material.card.MaterialCardView
