--- a/app/src/main/res/layout/item_grid_favorite_character.xml
+++ b/app/src/main/res/layout/item_grid_favorite_character.xml
@@ -6,7 +6,9 @@
     <data>
         <variable
             name="character"
-            type="com.platzi.android.rickandmorty.database.CharacterEntity" />
+            type="com.platzi.android.rickandmorty.domain.Character" />
+
+            <!--type="com.platzi.android.rickandmorty.database.CharacterEntity" /> cambiado en clase 13-->
     </data>
 
     <com.google.android.material.card.MaterialCardView
