Ninth Commit - Implementing Domain Layer - Episode List - Class 15

--- a/app/src/main/res/layout/item_list_episode.xml
+++ b/app/src/main/res/layout/item_list_episode.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+<!--Cambiamos EpisodeSever por Episode del dominio Clase 15-->
     <data>
         <variable
             name="episode"
-            type="com.platzi.android.rickandmorty.api.EpisodeServer" />
+            type="com.platzi.android.rickandmorty.domain.Episode" />
     </data>
 
     <LinearLayout
